--- a/webapp.html
+++ b/webapp.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>ArcGIS JavaScript Tutorials: Edit feature data</title>
+    <title>PinPoint Reviews</title>
     <style>
         html, body, #viewDiv {
             padding: 0;
